handle forgot password and design Blog page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7329,7 +7329,7 @@ h1, h2, h3, h4, h5,
   right: 0;
   overflow-y: hidden;
   z-index: 1001;
-  background: #f67e7d;
+  background-color: #efe1e1 !important;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
